# cats-cradle

./: CHANGELOG.md  LICENSE.md  README.md  cats-cradle-flash.txt  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: string_theory.py
app/core/: config.py
app/models/: string_theory.py
app/schemas/: string_theory.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: dashboard.js
tests/: conftest.py  test_api.py  test_physics.py
