[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[project]
name = "cats-cradle"
version = "0.1.0"
description = "A dashboard for visualizing string theory simulations"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"